--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,16 @@ body {
     padding: 40px 15px;
     text-align: center;
   }
+
+  .booth {
+    width: 400px;
+    border: 10px solid black;
+    background-color: aqua;
+    margin: 0 auto;
+
+}
+
+video {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
