--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,18 @@ body {
     border: 10px solid black;
     background-color: aqua;
     margin: 0 auto;
+  }
 
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: DodgerBlue;
 }
 
-video {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
+.flex-container > img {
+  background-color: #f1f1f1;
+  height: 100px;
+  width: 100px;
+  margin: 10px;
+}
