--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body {
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/background.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
     padding-top: 50px;
   }
   .starter-template {
@@ -11,6 +15,10 @@ body {
     width: 420px;
     border: 10px solid black;
     background-image: url("../img/booth.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
     margin: 0 auto;
   }
 
@@ -18,10 +26,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: DodgerBlue;
 }
 
 .flex-container > img {
+  border: 3px solid black;
   background-color: #f1f1f1;
   height: 100px;
   width: 100px;
