Done, though best to thoroughly check for sql injectioin

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,17 @@ body {
     background-image: url("../img/background.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
     padding-top: 50px;
   }
   .starter-template {
     padding: 40px 15px;
     text-align: center;
+  }
+  
+  html, 
+  body {
+      height: 100%;
   }
 
   .booth {
@@ -34,4 +38,18 @@ body {
   height: 100px;
   width: 100px;
   margin: 10px;
+}
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+
+.page {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
 }
