--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,11 @@ body {
 }
 
 footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
   position: absolute;
-  bottom: 0;
   text-align: center;
 }
 
